<resources>
    <string name="app_name">iFind</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Tra cứu</string>
    <string name="title_notifications">Lịch tàu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="btnLogin">Đăng nhập</string>
    <string name="title_login">ĐĂNG NHẬP</string>
    <string name="title_main">iTracking</string>
    <string name="text_register">Bạn chưa có tài khoản ? </string>
    <string name="register_link_text">Đăng ký</string>
    <string name="title_menu">ĐĂNG NHẬP</string>
    <string name="str_notify_login">Tên đăng nhập hoặc mật khẩu không thể bỏ trống</string>
    <string name="str_notify_login_false">Tên đăng nhập hoặc mật khẩu không chính xác</string>
    <string name="dialog_notify">Thông báo</string>
    <string name="dialog_try">Thử lại</string>
    <string name="notify_search_cont">Nhập số Container cần tìm</string>
    <string name="search_button">Tìm kiếm</string>
    <string name="notify_empty_cont">Bạn phải nhập số Container cần tìm</string>
    <string name="str_socont">Số Container:</string>
    <string name="result_str_cont">Thông tin chi tiết Container</string>
    <string name="str_vitri">Vị trí trên Bãi:</string>
    <string name="str_kichco">Kích cỡ:</string>
    <string name="str_kieu">Kiểu:</string>
    <string name="str_hangkt">Hãng khai thác:</string>
    <string name="str_trangthai">Trạng thái: </string>
    <string name="str_ngayvao">Ngày vào Bãi:</string>
    <string name="str_ngayra">Ngày ra Bãi:</string>
    <string name="title_activity_container_location_map">Map</string>
    <string name="str_internet">Không có kết nối Internet, Hãy kiểm tra lại mạng Wifi</string>
    <string name="str_latitude">Vĩ độ:</string>
    <string name="str_longtitude">Kinh độ:</string>
    <string name="str_chiduong">Chỉ đường:</string>
    <string name="str_vitrikhongxacdinh">Không xác định được vị trí </string>
    <string name="str_tamdung">Kết nối tạm dừng</string>
    <string name="str_ketnoithatbai">Kết nối thất bại, lỗi: </string>
    <string name="str_capnhatvitri">Vị trí hiện tại của bạn:</string>
    <string name="str_singlepermission">Quyền truy cập được cấp phép</string>
    <string name="str_kichhoat">Kích hoạt vị trí</string>
    <string name="str_batvitri">Vị trí của bạn đang tắt GPS, xin vui lòng bật vị trí để sử dụng tính năng chỉ đường</string>
    <string name="str_setting">Thiết lập vị trí</string>
    <string name="str_S">Đang trên Bãi</string>
    <string name="str_D">Ở ngoài Bãi</string>
    <string name="str_I">Đang vào Bãi</string>
    <string name="str_O">Đang xuất Bãi</string>
    <string name="str_B">Đang trên Tàu</string>
    <string name="str_NON">Chưa xác định</string>
</resources>
